src/test/ui/where-clauses/where-clause-constraints-are-local-for-trait-impl.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/where-clause-constraints-are-local-for-trait-impl.rs:18:22
   |
LL | fn require_copy<T: Copy>(x: T) {}
   |    ------------    ---- required by this bound in `require_copy`
...
LL |         require_copy(self.x);
   |                      ^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
help: consider restricting this type parameter with `T: std::marker::Copy`
  --> $DIR/where-clause-constraints-are-local-for-trait-impl.rs:11:6
   |
LL | impl<T> Foo<T> for Bar<T> {
   |      ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
